--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hello Venkat! Website Deployment Success ✅</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+</head>
+<body>
+  <h1>Hello Venkat! Website Deployment Success ✅</h1>
+</body>
+</html>
+
